# TitanSchedule

./: .gitignore  CLAUDE.md  LICENSE  pyproject.toml  requirements.txt
.claude-plugin/: plugin.json
.claude/agents/: ci-failure-analyzer.md  code-review-orchestrator.md  documentation-engineer.md  frontend-engineer.md  implementation-engineer.md  test-engineer.md
.claude/commands/: fix-ci.md  impl.md  review.md  test.md
.claude/shared/: common-constraints.md  error-handling.md  git-commit-policy.md  pr-workflow.md
.claude/skills/fix-ci-failures/: SKILL.md
.claude/skills/gh-check-ci-status/: SKILL.md
.claude/skills/gh-create-pr-linked/: SKILL.md
.claude/skills/gh-fix-pr-feedback/: SKILL.md
.claude/skills/quality-run-linters/: SKILL.md
.claude/skills/review-pr-changes/: SKILL.md
.claude/skills/run-precommit/: SKILL.md
.claude/skills/verify-pr-ready/: SKILL.md
docs/: architecture.html  research.html  research.md
docs/prompts/: 01-agent-infrastructure.md  02-project-infrastructure.md  03-scraper-and-parsers.md  04-graph-and-exporter.md  05-frontend.md  06-validation.md
references/: notes.md
scraper/: capture_fixtures.py  cli.py  client.py  config.py  models.py  url.py
scraper/graph/: __init__.py  builder.py  exporter.py  pruner.py  team_exporter.py
scraper/parsers/: __init__.py  base.py  bracket.py  division.py  follow_on.py  followon.py  pool.py
scripts/: deploy.sh  scrape.sh  serve.sh  snapshot.sh
skills/fixed-height-dag-timeline/: SKILL.md
skills/frontend-from-data-contract/: SKILL.md
skills/fullstack-python-spa-plan-impl/: SKILL.md
skills/live-api-validation-cycle/: SKILL.md
skills/scaffold-from-spec/: SKILL.md
tests/: conftest.py  test_bracket_parser.py  test_cli.py  test_client.py  test_division_parser.py  test_exporter.py  test_followon_parser.py  test_graph_builder.py  test_integration.py  test_models.py  test_pool_parser.py  test_pruner.py  test_url.py
tests/fixtures/14s-girls/: brackets_2026-02-01.json  brackets_2026-02-22.json  event.json  playdays.json  plays.json  pools_2026-01-31.json  pools_2026-02-22.json  poolsheet_-54281.json  poolsheet_-54290.json  poolsheet_-54299.json  poolsheet_-54308.json  poolsheet_-54317.json  poolsheet_-54326.json  poolsheet_-54335.json  poolsheet_-54344.json  poolsheet_-55386.json  poolsheet_-55395.json  poolsheet_-55404.json  poolsheet_-55413.json  poolsheet_-55422.json  poolsheet_-55431.json  poolsheet_-55440.json  poolsheet_-55449.json  poolsheet_-55458.json  (+27 more)
tests/test_graph/: __init__.py  test_builder.py  test_team_exporter.py
tests/test_parsers/: test_bracket.py  test_division.py  test_follow_on.py  test_pool.py
web/: index.html
web/css/: style.css  styles.css
web/js/: app.js  controls.js  export.js  graph.js  tooltips.js  trajectory.js
(+90 files in other folders)
